--- a/subscription-page/css/style.css
+++ b/subscription-page/css/style.css
@@ -65,6 +65,54 @@ nav {
     background-color: #f4f0ec;
 }
 
+.sub-text{
+    width:100%;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    min-height: 16vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.sub-text h2{
+    margin-top: 9vh;
+}
+
+.sub-form{
+    width:100%;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    min-height: 18vh;
+    display: table;
+    justify-content: space-around;
+    align-items: center;
+}
+
+input[type=email]{
+    width: 50%;
+    padding: 2vh;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    box-sizing: border-box;
+    margin-top: 10vh;
+  }
+
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    margin-top: 1vh;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 50%;
+  
+  }
+  
+
+
 @media screen and (max-width: 1024px) {
     .nav-links {
         width: 60%;
