--- a/subscription-page/css/style.css
+++ b/subscription-page/css/style.css
@@ -99,7 +99,7 @@ input[type=email]{
     margin-top: 10vh;
   }
 
-  input[type=submit] {
+  .btn {
     background-color: #4CAF50;
     color: white;
     padding: 12px 20px;
@@ -111,7 +111,9 @@ input[type=email]{
   
   }
   
-
+  .btn:hover {
+    background-color: #45a049;
+  }
 
 @media screen and (max-width: 1024px) {
     .nav-links {
